# Balance

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  example_balance.json  forge.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.mjs
.github/scripts/: android-smoke-test.sh  configure-android-barcode-scanner.mjs  configure-android-signing.mjs  configure-android-sync-wake-lock.mjs  generate-android-sync-qr.mjs
.github/workflows/: android.yml  macos-arm64.yml  release.yml
docs/: android-signing.md
electron/: main.js  preload.js
electron/modules/: ipc-handlers.js  state.js  timer.js  tray.js  window.js
scripts/: build-crsqlite.sh  relay-server.mjs
src/: App.svelte  Options.svelte  app.css  button.css  main.js  themes.js
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/sync/: crypto.rs  mod.rs  p2p.rs  relay.rs  tests.rs  transport.rs
src/components/: MissionSelector.svelte  TimerControls.svelte  TimerDisplay.svelte
src/lib/: AlarmClockIcon.svelte  Celebration.svelte  ColorPicker.svelte  DayCompleteCelebration.svelte  DocumentFindBar.svelte  GoalBurst.svelte  GoalColorPicker.svelte  GoalHistoryPanel.svelte  KeyboardShortcutsModal.svelte  ListPanel.svelte  ListTemplateItemEditor.svelte  MetricGraph.svelte  MetricQuiz.svelte  OverlayModal.svelte  PlanItemEditor.svelte  ProbabilitySlider.svelte  RichTextEditor.svelte  SearchModal.svelte  SyncPanel.svelte  TemplateItemEditor.svelte  TimeRange.svelte  TreeItemRow.svelte  colors.ts  goals.ts  itemScroll.ts  planner.ts  search.ts  store.ts  types.ts
tests/visual/: balance.spec.ts  goals.spec.ts  list-overlay-edit.spec.ts  lists-metrics.smoke.spec.ts  mobile-layout.spec.ts  paste-review-overflow.spec.ts  search.spec.ts
