[package]
name = "balance"
version = "0.1.0"
description = "Balance"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "balance_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "Balance"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
data-encoding = "2.11.0"
keyring = { version = "3.6.3", features = ["apple-native"] }
rand = "0.8.5"
rusqlite = { version = "0.32.1", features = ["bundled-sqlcipher-vendored-openssl"] }
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
