[package]
name = "balance"
version = "0.1.0"
description = "Balance"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "balance_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "Balance"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
data-encoding = "2.11.0"
rand = "0.8.5"
rusqlite = { version = "0.32.1", features = ["bundled-sqlcipher-vendored-openssl"] }
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"

# The OS keychain integration is desktop-only. Android stores the database
# recovery key in app-private internal storage instead (see lib.rs).
[target.'cfg(not(target_os = "android"))'.dependencies]
keyring = { version = "3.6.3", features = ["apple-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSPasteboard"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSString", "NSUserDefaults"] }
